--- a/cities/package.json
+++ b/cities/package.json
@@ -23,8 +23,10 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "prettier": "^1.10.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.20.1",
     "ts-loader": "^3.3.1",
     "tslint": "^5.9.1",
@@ -39,6 +41,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "bulma": "^0.6.2",
+    "bulmaswatch": "^0.5.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
