--- a/cities/package.json
+++ b/cities/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
+    "open-browser-webpack-plugin": "^0.0.5",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "prettier": "^1.10.2",
     "sass-loader": "^6.0.6",
@@ -46,6 +47,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "ymaps": "^0.1.1"
   }
